--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "private": true,
-  "scripts": {
+    "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "graphql": "^16.0.1",
+    "graphql-request": "^3.6.1",
+    "html-react-parser": "^1.4.0",
+    "moment": "^2.29.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
